--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-<p>test</p>
+{
+   "bedwars":{
+      "acropolis":100,
+      "airshow":100,
+      "alaric":97,
+      "amazon":93,
+      "apollo":98,
+      "aquarium":110,
+      "archway":86,
+      "ashfire":120,
+      "ashore":121,
+      "babylon":107,
+      "bio-hazard":95,
+      "biohazard":95,
+      "blossom":96,
+      "boardwalk":92,
+      "boletum":121,
+      "capture":121,
+      "carapace":94,
+      "cascade":87,
+      "catalyst":101,
+      "chained":90,
+      "cliffside":100,
+      "coastal":86,
+      "comet":115,
+      "crogorm":123,
+      "crypt":95,
+      "cryptic":104,
+      "dragonstar":100,
+      "dreamgrove":115,
+      "easter_garden":98,
+      "eastwood":100,
+      "egg_run":98,
+      "enchanted":100,
+      "extinction":95,
+      "fang_outpost":99,
+      "fireplace":95,
+      "forest":121,
+      "fort doon":139,
+      "fort_doon":139,
+      "frost":121,
+      "gardens":101,
+      "gateway":128,
+      "gingerbread":106,
+      "glacier":105,
+      "graveship":122,
+      "hanging_gardens":107,
+      "hell_temple":114,
+      "hollow":88,
+      "holmgang":97,
+      "horizon":100,
+      "inca":95,
+      "invasion":115,
+      "ivory_castle":110,
+      "jurassic":94,
+      "katsu":96,
+      "lectus":90,
+      "lighthouse":110,
+      "lightstone":95,
+      "lions_temple":103,
+      "lotus":121,
+      "meso":95,
+      "mortuus":90,
+      "obelisk":114,
+      "ominosity":123,
+      "orbit":96,
+      "orchestra":106,
+      "pernicious":90,
+      "pharaoh":95,
+      "pharoah":107,
+      "picnic":121,
+      "planet_98":105,
+      "playground":100,
+      "pumpkin_bay":85,
+      "relic":90,
+      "rise":96,
+      "rooftop":121,
+      "rooted":95,
+      "ruins":91,
+      "sandcastle":102,
+      "scareshow":100,
+      "screamway":90,
+      "shark_attack":94,
+      "siege":108,
+      "sky_festival":94,
+      "sky_rise":90,
+      "solace":100,
+      "speedway":90,
+      "steampumpkin":99,
+      "steampunk":99,
+      "stonekeep":75,
+      "swashbuckle":85,
+      "temple":106,
+      "test":5,
+      "toro":92,
+      "treenan":121,
+      "unchained":90,
+      "unturned":92,
+      "waterfall":100,
+      "zarzul":141
+   }
+}
