--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       "babylon":107,
       "bio-hazard":95,
       "biohazard":95,
+      "blitzen":110,
       "blossom":96,
       "boardwalk":92,
       "boletum":121,
@@ -44,6 +45,7 @@
       "gingerbread":106,
       "glacier":105,
       "graveship":122,
+      "grotto":98,
       "hanging_gardens":107,
       "hell_temple":114,
       "hollow":88,
@@ -61,6 +63,7 @@
       "lotus":121,
       "meso":95,
       "mortuus":90,
+      "nutcracker":98,
       "obelisk":114,
       "ominosity":123,
       "orbit":96,
@@ -97,6 +100,7 @@
       "unchained":90,
       "unturned":92,
       "waterfall":100,
+      "yue":101,
       "zarzul":141
    }
 }
