--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       "sky_festival":94,
       "sky_rise":90,
       "solace":100,
+      "sunflower": 95,
       "speedway":90,
       "steampumpkin":99,
       "steampunk":99,
