--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       "archway":86,
       "ashfire":120,
       "ashore":121,
+      "aqil":90,
       "babylon":107,
       "bio-hazard":95,
       "biohazard":95,
@@ -27,6 +28,7 @@
       "crogorm":123,
       "crypt":95,
       "cryptic":104,
+      "dockyard":97,
       "dragonstar":100,
       "dreamgrove":115,
       "easter_garden":98,
@@ -61,19 +63,23 @@
       "lightstone":95,
       "lions_temple":103,
       "lotus":121,
+      "lucky_rush":84,
       "meso":95,
+      "mirage":86,
       "mortuus":90,
       "nutcracker":98,
       "obelisk":114,
       "ominosity":123,
       "orbit":96,
       "orchestra":106,
+      "pavilion":97,
       "pernicious":90,
       "pharaoh":95,
       "pharoah":107,
       "picnic":121,
       "planet_98":105,
       "playground":100,
+      "polygon":93,
       "pumpkin_bay":85,
       "relic":90,
       "rise":96,
@@ -82,7 +88,9 @@
       "ruins":91,
       "sandcastle":102,
       "scareshow":100,
+      "scorched_sands":92,
       "screamway":90,
+      "serenity":93,
       "shark_attack":94,
       "siege":108,
       "sky_festival":94,
