--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       "apollo":98,
       "aquarium":110,
       "archway":86,
+      "artemis":96,
       "ashfire":120,
       "ashore":121,
       "aqil":90,
@@ -17,6 +18,7 @@
       "blossom":96,
       "boardwalk":92,
       "boletum":121,
+      "build_site":96,
       "capture":121,
       "carapace":94,
       "cascade":87,
@@ -28,6 +30,7 @@
       "crogorm":123,
       "crypt":95,
       "cryptic":104,
+      "daolong":90,
       "dockyard":97,
       "dragonstar":100,
       "dreamgrove":115,
@@ -58,6 +61,7 @@
       "ivory_castle":110,
       "jurassic":94,
       "katsu":96,
+      "kubo":91,
       "lectus":90,
       "lighthouse":110,
       "lightstone":95,
@@ -72,6 +76,8 @@
       "ominosity":123,
       "orbit":96,
       "orchestra":106,
+      "paladin":98,
+      "paradox":84,
       "pavilion":97,
       "pernicious":90,
       "pharaoh":95,
@@ -80,6 +86,7 @@
       "planet_98":105,
       "playground":100,
       "polygon":93,
+      "pool_party":86,
       "pumpkin_bay":85,
       "relic":90,
       "rise":96,
@@ -110,6 +117,7 @@
       "unturned":92,
       "waterfall":100,
       "yue":101,
-      "zarzul":141
+      "zarzul":141,
+      "zen_plaza":83
    }
 }
