--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
       "waterfall":101,
       "yue":101,
       "zarzul":142,
-      "zen_plaza":84
+      "zen_plaza":84,
+      "gelato":81,
+      "dockyard": 98,
+      "blossom": 97,
+      "fruitbrawl": 101
    }
 }
