4/6 mega maps(in the current rotation)

--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
       "tain": 88,
       "towers": 106,
       "tribal": 119,
-      "winterhelm": 71
+      "winterhelm": 71,
+      "maereen": 111,
+      "hontori":121,
+      "oasis": 112,
+      "finale": 90,
    }
 }
