--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@
       "zarzul":142,
       "zen_plaza":84,
       "gelato":81,
-      "dockyard": 98,
-      "blossom": 97,
       "fruitbrawl": 101
    },
    "skywars":{
@@ -162,5 +160,8 @@
       "hontori":121,
       "oasis": 112,
       "finale": 90,
+      "clearing": 73,
+      "crumble": 85,
+      "simiao": 86
    }
 }
