--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
       "zarzul":142,
       "zen_plaza":84,
       "gelato":81,
-      "fruitbrawl": 101
+      "fruitbrawl": 101,
+      "symphonic": 107
    },
    "skywars":{
       "aegis":116,
