lol why not right

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       "zen_plaza":84,
       "gelato":81,
       "fruitbrawl": 101,
-      "symphonic": 107
+      "symphonic": 107,
+      "practice": 247
    },
    "skywars":{
       "aegis":116,
