some of the new skywars rotation maps

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
       "towers": 106,
       "tribal": 119,
       "winterhelm": 71,
+      "sunken": 89,
+      "shire": 85,      
+      "jagged":108,
       "maereen": 111,
       "hontori":121,
       "oasis": 112,
