chnaged test to 8

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-{
+git {
    "bedwars":{
       "acropolis":101,
       "airshow":101,
@@ -110,7 +110,7 @@
       "stonekeep":75,
       "swashbuckle":86,
       "temple":107,
-      "test":5,
+      "test":8,
       "toro":93,
       "treenan":122,
       "unchained":90,
