--- a/index.html
+++ b/index.html
@@ -1,172 +1,293 @@
 {
    "bedwars":{
-      "acropolis":101,
-      "airshow":101,
-      "alaric":97,
-      "amazon":93,
-      "apollo":98,
       "aquarium":111,
-      "archway":86,
       "artemis":97,
-      "ashfire":121,
-      "ashore":121,
-      "aqil":91,
-      "babylon":107,
-      "bio-hazard":96,
-      "biohazard":96,
-      "blitzen":110,
-      "blossom":97,
-      "boardwalk":92,
-      "boletum":121,
-      "build_site":96,
-      "capture":121,
       "carapace":95,
-      "cascade":87,
-      "catalyst":101,
-      "chained":90,
-      "cliffside":100,
-      "coastal":90,
-      "comet":115,
-      "crogorm":124,
-      "crypt":95,
-      "cryptic":104,
-      "daolong":91,
-      "dockyard":98,
-      "dragonstar":101,
+      "catalyst":102,
       "dreamgrove":116,
-      "easter_garden":98,
+      "burrow":101,
+      "springtide":87,
       "eastwood":101,
-      "egg_run":98,
+      "alaric":98,
+      "hell_temple":115,
+      "mortuus":91,
+      "invasion":116,
+      "jurassic":95,
+      "kubo":92,
+      "lectus":91,
+      "orientwood":101,
+      "sky_festival":95,
+      "obelisk":115,
+      "paladin":99,
+      "paradox":85,
+      "boardwalk":93,
+      "coastal":90,
+      "unturned":93,
+      "comet":116,
+      "santa's_rush":93,
+      "archway":87,
+      "ashore":0,
+      "boletum":0,
+      "build_site":97,
+      "chained":91,
+      "daolong":91,
+      "egg_run":99,
       "enchanted":101,
       "extinction":96,
       "fang_outpost":100,
-      "fireplace":95,
-      "forest":121,
-      "fort doon":139,
-      "fort_doon":139,
-      "frost":121,
-      "gardens":101,
-      "gateway":128,
-      "gingerbread":106,
-      "glacier":105,
+      "fort_doon":140,
       "graveship":124,
-      "grotto":98,
-      "hanging_gardens":107,
-      "hell_temple":114,
-      "hollow":89,
-      "holmgang":97,
-      "horizon":100,
-      "inca":95,
-      "invasion":115,
-      "ivory_castle":110,
-      "jurassic":95,
+      "pumpkin_bay":86,
+      "unchained":91,
+      "holmgang":98,
+      "horizon":101,
       "katsu":97,
-      "kubo":92,
-      "lectus":91,
-      "lighthouse":111,
-      "lightstone":96,
-      "lions_temple":103,
-      "lotus":121,
-      "lucky_rush":85,
-      "meso":95,
-      "mirage":87,
-      "mortuus":90,
-      "nutcracker":98,
-      "obelisk":114,
-      "ominosity":123,
-      "orbit":97,
-      "orchestra":107,
-      "paladin":99,
-      "paradox":85,
-      "pavilion":97,
-      "pernicious":90,
+      "tigris":102,
       "pharaoh":96,
-      "pharoah":107,
-      "picnic":121,
-      "planet_98":105,
-      "playground":101,
-      "polygon":94,
+      "planet_98":106,
       "pool_party":87,
-      "pumpkin_bay":85,
       "relic":91,
       "rise":97,
-      "rooftop":121,
-      "rooted":96,
-      "ruins":91,
-      "sandcastle":102,
-      "scareshow":100,
-      "scorched_sands":93,
-      "screamway":90,
+      "stonekeep":76,
+      "sandcastle":103,
+      "shark_attack":95,
+      "swashbuckle":86,
+      "treenan":96,
+      "grotto":101,
+      "snowkeep":76,
+      "zen_plaza":84,
+      "airshow":101,
+      "apollo":99,
+      "aqil":91,
+      "crypt":96,
+      "dragonstar":101,
+      "easter_basket":94,
+      "easter_garden":99,
+      "egg_hunt":101,
+      "sunflower":96,
+      "gateway":129,
+      "glacier":106,
+      "darkened":82,
+      "scareshow":101,
+      "screamway":91,
+      "lighthouse":111,
+      "lucky_rush":85,
+      "blossom":97,
+      "lunarhouse":111,
+      "yue":102,
+      "meso":96,
+      "orchestra":107,
+      "pernicious":91,
+      "polygon":94,
+      "rooftop":92,
       "serenity":94,
-      "shark_attack":94,
-      "siege":109,
-      "sky_festival":95,
       "sky_rise":91,
       "solace":101,
-      "sunflower": 95,
-      "speedway":90,
-      "steampumpkin":99,
-      "steampunk":99,
-      "stonekeep":75,
-      "swashbuckle":86,
-      "temple":107,
-      "test":5,
-      "toro":93,
-      "treenan":122,
-      "unchained":90,
-      "unturned":92,
-      "waterfall":101,
-      "yue":101,
-      "zarzul":115,
-      "zen_plaza":84,
+      "speedway":91,
       "gelato":81,
-      "fruitbrawl": 101,
-      "symphonic": 107,
-      "practice": 247
+      "symphonic":107,
+      "waterfall":101,
+      "blitzen":111,
+      "nutcracker":99,
+      "zarzul":115,
+      "acropolis":101,
+      "amazon":94,
+      "ashfire":121,
+      "babylon":108,
+      "bio-hazard":96,
+      "cascade":88,
+      "cliffside":101,
+      "crogorm":124,
+      "dockyard":98,
+      "ominosity":124,
+      "steampumpkin":100,
+      "trick_or_yeet":95,
+      "hollow":89,
+      "lightstone":96,
+      "lotus":90,
+      "toro":93,
+      "mirage":87,
+      "orbit":97,
+      "pavilion":98,
+      "playground":101,
+      "rooted":96,
+      "scorched_sands":93,
+      "siege":109,
+      "steampunk":100,
+      "fruitbrawl":101,
+      "fireplace":96,
+      "lotice":91
    },
    "skywars":{
-      "aegis":116,
-      "craboab": 85,
-      "crystal_source": 94,
-      "dawn": 104,
-      "embercell": 94,
-      "firelink_shrine": 101,
-      "fossil": 73,
-      "hanging_gardens": 104,
-      "hibiscus": 111,
-      "mont_golball": 101,
-      "mountain_top": 96,
-      "martian": 85,
-      "helios": 84,
-      "longisland": 109,
-      "mushy": 102,
-      "mythic": 101,
-      "neapolitan": 105,
-      "mythos": 101,
-      "niu": 107,
-      "oberon_towers": 112,
-      "nomad": 131,
-      "oceana": 90,
-      "paradise": 95,
-      "radis": 93,
-      "railroad": 111,
-      "sanctuary": 90,
-      "sanctum": 101,
-      "strata": 129,
-      "submerged": 71,
-      "tain": 88,
-      "towers": 106,
-      "tribal": 119,
-      "winterhelm": 71,
-      "sunken": 89,
-      "shire": 85,      
-      "jagged":108,
-      "maereen": 111,
+      "anchored":106,
+      "aqueduct":141,
+      "arx_citadel":106,
+      "dwarf_fortress":111,
+      "finale":90,
       "hontori":121,
-      "oasis": 112,
-      "finale": 90,
-      "clearing": 73,
-      "crumble": 85,
-      "simiao": 86
+      "maereen":111,
+      "magnolite":105,
+      "marooned":111,
+      "megashire":121,
+      "northern":126,
+      "oasis":112,
+      "onset":96,
+      "sandbox":75,
+      "shrooms":122,
+      "templar":101,
+      "agni_temple":81,
+      "arbor":112,
+      "astar":111,
+      "boomerang":117,
+      "coherence":95,
+      "courtyard":92,
+      "dynasty":75,
+      "bloom":92,
+      "eden":89,
+      "eirene":81,
+      "equinox":81,
+      "exile_islands":102,
+      "expar":90,
+      "fortress":105,
+      "forum":99,
+      "foundation":65,
+      "fountain":114,
+      "fungi":65,
+      "hardware":93,
+      "highlight":90,
+      "humidity":79,
+      "magnus":121,
+      "meteor":77,
+      "network":93,
+      "overstone":101,
+      "pitfall":96,
+      "qubez":87,
+      "reef":101,
+      "rocky":119,
+      "sawmill":103,
+      "southvine":103,
+      "swamp":101,
+      "the_great_north":98,
+      "thicket":100,
+      "tourny":97,
+      "trench":85,
+      "twisted_grove":106,
+      "varok":105,
+      "zion":91,
+      "aegis":116,
+      "aquacrown":94,
+      "aquarius":91,
+      "arule":101,
+      "atlas":101,
+      "atuin":110,
+      "canopy":105,
+      "chronos":75,
+      "clearing":73,
+      "crumble":85,
+      "crystal_source":94,
+      "dawn":113,
+      "desserted_island":93,
+      "dwarven":105,
+      "blossom":96,
+      "egg_isle":107,
+      "farmers_dozen":95,
+      "farmstead":93,
+      "mushroom_vale":91,
+      "pralines":89,
+      "shoompa":89,
+      "elven":159,
+      "embercell":94,
+      "entangled":96,
+      "felkenheart":105,
+      "firelink_shrine":101,
+      "forgotten":104,
+      "fossil":73,
+      "fragment":101,
+      "frostbound":83,
+      "garage":86,
+      "garden_bed":92,
+      "garrison":78,
+      "bastion":78,
+      "desolate":73,
+      "dire":85,
+      "jacko_malice":105,
+      "sacrifice":105,
+      "scaremorial":94,
+      "selene":84,
+      "trepid":129,
+      "triffids":111,
+      "undead_isle":98,
+      "undergrowth":101,
+      "witch's_brew":104,
+      "hanging_gardens":104,
+      "heaven_palace":105,
+      "helios":84,
+      "hibiscus":111,
+      "jagged":108,
+      "jinzhou":91,
+      "longisland":109,
+      "embers":65,
+      "niu":107,
+      "simiao":86,
+      "magma":49,
+      "martian":85,
+      "memorial":91,
+      "mont_golball":101,
+      "mothership":94,
+      "mountain_top":96,
+      "mushy":112,
+      "mythic":101,
+      "mythos":101,
+      "nomad":131,
+      "oberon_towers":112,
+      "oceana":90,
+      "onionring_2":106,
+      "onionring":89,
+      "overfall":113,
+      "palette":96,
+      "plateau":81,
+      "radis":93,
+      "railroad":111,
+      "redfang":111,
+      "roots":123,
+      "sanctuary":90,
+      "sanctum":101,
+      "siege":133,
+      "sentinel":81,
+      "shaohao":113,
+      "shire":85,
+      "skychurch":129,
+      "steampunk":102,
+      "strata":129,
+      "submerged":71,
+      "aku":90,
+      "craboab":85,
+      "neapolitan":105,
+      "paradise":95,
+      "summorial":94,
+      "sunken":89,
+      "tain":88,
+      "tiki":92,
+      "toadstool":133,
+      "towers":106,
+      "tribal":119,
+      "tribute":105,
+      "tundra":121,
+      "ukishima":97,
+      "villa":128,
+      "waterways":88,
+      "candylane":108,
+      "cookie_fest":78,
+      "frostgard":119,
+      "fruitcake":121,
+      "garland":111,
+      "glazed":103,
+      "ice_bourne":85,
+      "offering":105,
+      "plathohoho":131,
+      "verglas":133,
+      "winter_retreat":90,
+      "wreath":103,
+      "winterhelm":71
    }
 }
