--- a/index.html
+++ b/index.html
@@ -1,293 +1,321 @@
 {
-   "bedwars":{
-      "aquarium":111,
-      "artemis":97,
-      "carapace":95,
-      "catalyst":102,
-      "dreamgrove":116,
-      "burrow":101,
-      "springtide":87,
-      "eastwood":101,
-      "alaric":98,
-      "hell_temple":115,
-      "mortuus":91,
-      "invasion":116,
-      "jurassic":95,
-      "kubo":92,
-      "lectus":91,
-      "orientwood":101,
-      "sky_festival":95,
-      "obelisk":115,
-      "paladin":99,
-      "paradox":85,
-      "boardwalk":93,
-      "coastal":90,
-      "unturned":93,
-      "comet":116,
-      "santa's_rush":93,
-      "archway":87,
-      "ashore":0,
-      "boletum":0,
-      "build_site":97,
-      "chained":91,
-      "daolong":91,
-      "egg_run":99,
-      "enchanted":101,
-      "extinction":96,
-      "fang_outpost":100,
-      "fort_doon":140,
-      "graveship":124,
-      "pumpkin_bay":86,
-      "unchained":91,
-      "holmgang":98,
-      "horizon":101,
-      "katsu":97,
-      "tigris":102,
-      "pharaoh":96,
-      "planet_98":106,
-      "pool_party":87,
-      "relic":91,
-      "rise":97,
-      "stonekeep":76,
-      "sandcastle":103,
-      "shark_attack":95,
-      "swashbuckle":86,
-      "treenan":96,
-      "grotto":101,
-      "snowkeep":76,
-      "zen_plaza":84,
-      "airshow":101,
-      "apollo":99,
-      "aqil":91,
-      "crypt":96,
-      "dragonstar":101,
-      "easter_basket":94,
-      "easter_garden":99,
-      "egg_hunt":101,
-      "sunflower":96,
-      "gateway":129,
-      "glacier":106,
-      "darkened":82,
-      "scareshow":101,
-      "screamway":91,
-      "lighthouse":111,
-      "lucky_rush":85,
-      "blossom":97,
-      "lunarhouse":111,
-      "yue":102,
-      "meso":96,
-      "orchestra":107,
-      "pernicious":91,
-      "polygon":94,
-      "rooftop":92,
-      "serenity":94,
-      "sky_rise":91,
-      "solace":101,
-      "speedway":91,
-      "gelato":81,
-      "symphonic":107,
-      "waterfall":101,
-      "blitzen":111,
-      "nutcracker":99,
-      "zarzul":115,
-      "acropolis":101,
-      "amazon":94,
-      "ashfire":121,
-      "babylon":108,
-      "bio-hazard":96,
-      "cascade":88,
-      "cliffside":101,
-      "crogorm":124,
-      "dockyard":98,
-      "ominosity":124,
-      "steampumpkin":100,
-      "trick_or_yeet":95,
-      "hollow":89,
-      "lightstone":96,
-      "lotus":90,
-      "toro":93,
-      "mirage":87,
-      "orbit":97,
-      "pavilion":98,
-      "playground":101,
-      "rooted":96,
-      "scorched_sands":93,
-      "siege":109,
-      "steampunk":100,
-      "fruitbrawl":101,
-      "fireplace":96,
-      "lotice":91
-   },
    "skywars":{
-      "anchored":106,
-      "aqueduct":141,
-      "arx_citadel":106,
-      "dwarf_fortress":111,
-      "finale":90,
-      "hontori":121,
-      "maereen":111,
-      "magnolite":105,
-      "marooned":111,
-      "megashire":121,
-      "northern":126,
-      "oasis":112,
-      "onset":96,
-      "sandbox":75,
-      "shrooms":122,
-      "templar":101,
-      "agni_temple":81,
-      "arbor":112,
-      "astar":111,
-      "boomerang":117,
-      "coherence":95,
-      "courtyard":92,
-      "dynasty":75,
-      "bloom":92,
-      "eden":89,
-      "eirene":81,
-      "equinox":81,
-      "exile_islands":102,
-      "expar":90,
-      "fortress":105,
-      "forum":99,
-      "foundation":65,
-      "fountain":114,
-      "fungi":65,
-      "hardware":93,
-      "highlight":90,
-      "humidity":79,
-      "magnus":121,
-      "meteor":77,
-      "network":93,
-      "overstone":101,
-      "pitfall":96,
-      "qubez":87,
-      "reef":101,
-      "rocky":119,
-      "sawmill":103,
-      "southvine":103,
-      "swamp":101,
-      "the_great_north":98,
-      "thicket":100,
-      "tourny":97,
-      "trench":85,
-      "twisted_grove":106,
-      "varok":105,
-      "zion":91,
-      "aegis":116,
-      "aquacrown":94,
-      "aquarius":91,
-      "arule":101,
-      "atlas":101,
-      "atuin":110,
-      "canopy":105,
-      "chronos":75,
-      "clearing":73,
-      "crumble":85,
-      "crystal_source":94,
-      "dawn":113,
-      "desserted_island":93,
-      "dwarven":105,
+      "agni_temple":80,
+      "arbor":111,
+      "astar":110,
+      "boomerang":116,
+      "coherence":94,
+      "courtyard":91,
+      "dynasty":74,
+      "bloom":91,
+      "eden":88,
+      "eirene":80,
+      "equinox":80,
+      "exile_islands":101,
+      "expar":89,
+      "fortress":104,
+      "forum":98,
+      "foundation":64,
+      "fountain":113,
+      "fungi":64,
+      "hardware":92,
+      "highlight":89,
+      "humidity":78,
+      "magnus":120,
+      "meteor":76,
+      "network":92,
+      "overstone":100,
+      "pitfall":95,
+      "qubez":86,
+      "reef":100,
+      "rocky":118,
+      "sawmill":102,
+      "southvine":102,
+      "swamp":100,
+      "the_great_north":97,
+      "thicket":99,
+      "tourny":96,
+      "trench":84,
+      "twisted_grove":105,
+      "varok":104,
+      "zion":90,
+      "longisland":108,
+      "anchored":105,
+      "aqueduct":140,
+      "arx_citadel":105,
+      "dwarf_fortress":110,
+      "finale":89,
+      "hontori":120,
+      "maereen":110,
+      "magnolite":104,
+      "marooned":110,
+      "megashire":120,
+      "northern":125,
+      "oasis":111,
+      "onset":95,
+      "sandbox":74,
+      "shrooms":121,
+      "templar":100,
+      "aegis":114,
+      "aelle":85,
+      "ancient":92,
+      "aquacrown":93,
+      "aquarius":90,
+      "arule":100,
+      "atlas":100,
+      "atuin":109,
+      "bonsai":98,
+      "canopy":104,
+      "chronos":74,
+      "clearing":76,
+      "crumble":84,
+      "crystal_source":93,
+      "dawn":112,
+      "deadland":82,
+      "deserted_dunes":78,
+      "desserted_island":92,
+      "dwarven":104,
+      "blossom":95,
+      "egg_isle":106,
+      "farmers_dozen":94,
+      "farmstead":92,
+      "mushroom_vale":90,
+      "pralines":88,
+      "shoompa":88,
+      "elven":158,
+      "embercell":93,
+      "entangled":95,
+      "felkenheart":104,
+      "firelink_shrine":100,
+      "forgotten":103,
+      "fossil":87,
+      "fragment":100,
+      "frostbound":82,
+      "garage":85,
+      "garden_bed":91,
+      "garrison":77,
+      "glacier":94,
+      "bastion":77,
+      "desolate":87,
+      "dire":84,
+      "jacko_malice":104,
+      "sacrifice":104,
+      "scaremorial":93,
+      "selene":83,
+      "trepid":128,
+      "triffids":110,
+      "undead_isle":97,
+      "undergrowth":100,
+      "witch's_brew":103,
+      "hanging_gardens":97,
+      "heaven_palace":104,
+      "helios":83,
+      "hibiscus":110,
+      "jagged":107,
+      "jinzhou":90,
+      "long_island":108,
+      "embers":64,
+      "harmony":95,
+      "niu":106,
+      "simiao":85,
+      "magma":48,
+      "martian":84,
+      "memorial":90,
+      "metari_temple":100,
+      "mont_golball":100,
+      "mothership":93,
+      "mountain_top":95,
+      "mushy":111,
+      "mythic":100,
+      "mythos":100,
+      "nomad":130,
+      "oberon_towers":111,
+      "oceana":89,
+      "onionring_2":105,
+      "onionring":88,
+      "overfall":112,
+      "palette":95,
+      "plateau":80,
+      "radis":92,
+      "railroad":110,
+      "redfang":110,
+      "roots":122,
+      "sanctuary":89,
+      "sanctum":100,
+      "siege":132,
+      "sentinel":80,
+      "shaohao":112,
+      "shire":84,
+      "skychurch":128,
+      "steampunk":101,
+      "strata":128,
+      "stronghold":91,
+      "submerged":90,
+      "aku":89,
+      "craboab":84,
+      "neapolitan":104,
+      "paradise":94,
+      "summorial":93,
+      "sunken":88,
+      "tain":87,
+      "tiki":91,
+      "toadstool":132,
+      "towers":105,
+      "tribal":78,
+      "tribute":104,
+      "tundra":120,
+      "ukishima":96,
+      "villa":127,
+      "waititi":83,
+      "waterways":87,
+      "candylane":107,
+      "congestion":78,
+      "cookie_fest":77,
+      "frostgard":78,
+      "fruitcake":120,
+      "garland":110,
+      "glazed":102,
+      "ice_bourne":84,
+      "offering":104,
+      "plathohoho":130,
+      "sugar_rush":102,
+      "verglas":132,
+      "winter_retreat":89,
+      "wreath":102,
+      "winterhelm":90,
+      "workshop":90
+   },
+   "bedwars":{
+      "aquarium":110,
+      "artemis":96,
+      "carapace":94,
+      "catalyst":101,
+      "deposit":81,
+      "dreamgrove":115,
+      "burrow":100,
+      "springtide":86,
+      "eastwood":100,
+      "alaric":97,
+      "cauldron":-1,
+      "hell_temple":114,
+      "mortuus":90,
+      "invasion":115,
+      "jurassic":94,
+      "kubo":91,
+      "lectus":90,
+      "orientwood":100,
+      "sky_festival":94,
+      "obelisk":114,
+      "paladin":98,
+      "paradox":84,
+      "boardwalk":92,
+      "coastal":89,
+      "terminal":87,
+      "unturned":92,
+      "comet":115,
+      "loft":82,
+      "santa's_rush":92,
+      "archway":86,
+      "ashore":94,
+      "boletum":-1,
+      "build_site":96,
+      "chained":90,
+      "daolong":90,
+      "egg_run":98,
+      "enchanted":100,
+      "extinction":95,
+      "fang_outpost":99,
+      "fort_doon":139,
+      "frogiton":90,
+      "graveship":123,
+      "pumpkin_bay":85,
+      "unchained":90,
+      "holmgang":97,
+      "horizon":100,
+      "katsu":96,
+      "tigris":101,
+      "usagi":96,
+      "pharaoh":95,
+      "planet_98":105,
+      "pool_party":86,
+      "relic":90,
+      "rise":96,
+      "stilted":80,
+      "stonekeep":75,
+      "sandcastle":102,
+      "shark_attack":94,
+      "swashbuckle":85,
+      "temple":-1,
+      "treenan":95,
+      "gingerbread":-1,
+      "grotto":100,
+      "snowkeep":75,
+      "zen_plaza":83,
+      "airshow":100,
+      "apollo":98,
+      "aqil":90,
+      "crypt":95,
+      "deadwood":83,
+      "dragonstar":100,
+      "easter_basket":93,
+      "easter_garden":98,
+      "egg_hunt":100,
+      "sunflower":95,
+      "gateway":128,
+      "darkened":81,
+      "scareshow":100,
+      "screamway":90,
+      "harvest":83,
+      "lighthouse":110,
+      "lucky_rush":84,
       "blossom":96,
-      "egg_isle":107,
-      "farmers_dozen":95,
-      "farmstead":93,
-      "mushroom_vale":91,
-      "pralines":89,
-      "shoompa":89,
-      "elven":159,
-      "embercell":94,
-      "entangled":96,
-      "felkenheart":105,
-      "firelink_shrine":101,
-      "forgotten":104,
-      "fossil":73,
-      "fragment":101,
-      "frostbound":83,
-      "garage":86,
-      "garden_bed":92,
-      "garrison":78,
-      "bastion":78,
-      "desolate":73,
-      "dire":85,
-      "jacko_malice":105,
-      "sacrifice":105,
-      "scaremorial":94,
-      "selene":84,
-      "trepid":129,
-      "triffids":111,
-      "undead_isle":98,
-      "undergrowth":101,
-      "witch's_brew":104,
-      "hanging_gardens":104,
-      "heaven_palace":105,
-      "helios":84,
-      "hibiscus":111,
-      "jagged":108,
-      "jinzhou":91,
-      "longisland":109,
-      "embers":65,
-      "niu":107,
-      "simiao":86,
-      "magma":49,
-      "martian":85,
-      "memorial":91,
-      "mont_golball":101,
-      "mothership":94,
-      "mountain_top":96,
-      "mushy":112,
-      "mythic":101,
-      "mythos":101,
-      "nomad":131,
-      "oberon_towers":112,
-      "oceana":90,
-      "onionring_2":106,
-      "onionring":89,
-      "overfall":113,
-      "palette":96,
-      "plateau":81,
-      "radis":93,
-      "railroad":111,
-      "redfang":111,
-      "roots":123,
-      "sanctuary":90,
-      "sanctum":101,
-      "siege":133,
-      "sentinel":81,
-      "shaohao":113,
-      "shire":85,
-      "skychurch":129,
-      "steampunk":102,
-      "strata":129,
-      "submerged":71,
-      "aku":90,
-      "craboab":85,
-      "neapolitan":105,
-      "paradise":95,
-      "summorial":94,
-      "sunken":89,
-      "tain":88,
-      "tiki":92,
-      "toadstool":133,
-      "towers":106,
-      "tribal":119,
-      "tribute":105,
-      "tundra":121,
-      "ukishima":97,
-      "villa":128,
-      "waterways":88,
-      "candylane":108,
-      "cookie_fest":78,
-      "frostgard":119,
-      "fruitcake":121,
-      "garland":111,
-      "glazed":103,
-      "ice_bourne":85,
-      "offering":105,
-      "plathohoho":131,
-      "verglas":133,
-      "winter_retreat":90,
-      "wreath":103,
-      "winterhelm":71
+      "lunarhouse":110,
+      "tuzi":91,
+      "yue":101,
+      "meso":95,
+      "orchestra":106,
+      "pernicious":90,
+      "polygon":93,
+      "rooftop":91,
+      "serenity":93,
+      "sky_rise":90,
+      "solace":100,
+      "speedway":90,
+      "gelato":80,
+      "symphonic":106,
+      "waterfall":100,
+      "blitzen":110,
+      "frosted":90,
+      "nutcracker":98,
+      "zarzul":114,
+      "acropolis":100,
+      "amazon":93,
+      "ashfire":120,
+      "babylon":107,
+      "bio-hazard":95,
+      "cascade":87,
+      "casita":93,
+      "cliffside":100,
+      "crogorm":123,
+      "dockyard":97,
+      "ominosity":123,
+      "steampumpkin":99,
+      "trick_or_yeet":94,
+      "hollow":88,
+      "ironclad":87,
+      "lightstone":95,
+      "lotus":89,
+      "toro":92,
+      "mirage":86,
+      "orbit":96,
+      "pavilion":97,
+      "playground":100,
+      "rooted":95,
+      "scorched_sands":92,
+      "siege":108,
+      "steampunk":99,
+      "fruitbrawl":100,
+      "fireplace":95,
+      "lotice":90
    }
 }
