--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
         "orientwood": 101,
         "sky_festival": 95,
         "obelisk": 115,
+        "orchid": 87,
         "paladin": 99,
         "paradox": 85,
+        "raze": 89,
         "boardwalk": 93,
         "coastal": 90,
         "terminal": 88,
@@ -47,6 +49,7 @@
         "unchained": 91,
         "holmgang": 98,
         "horizon": 101,
+        "infinite": 89,
         "katsu": 97,
         "tigris": 102,
         "usagi": 97,
@@ -67,6 +70,7 @@
         "snowkeep": 76,
         "zen_plaza": 84,
         "airshow": 101,
+        "ambush": 102,
         "apollo": 99,
         "aqil": 91,
         "crypt": 96,
@@ -94,12 +98,14 @@
         "pernicious": 91,
         "polygon": 94,
         "rooftop": 92,
+        "sanctum": 92,
         "serenity": 94,
         "sky_rise": 91,
         "solace": 101,
         "speedway": 91,
         "gelato": 81,
         "symphonic": 107,
+        "urban_plaza": 84,
         "waterfall": 101,
         "blitzen": 111,
         "frosted": 91,
@@ -119,6 +125,7 @@
         "steampumpkin": 100,
         "trick_or_yeet": 95,
         "hollow": 89,
+        "impere": 105,
         "ironclad": 88,
         "lightstone": 96,
         "lotus": 90,
