--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         "paladin": 99,
         "paradox": 85,
         "raze": 89,
+        "beeeee": 102,
         "boardwalk": 93,
         "coastal": 90,
         "terminal": 88,
@@ -104,6 +105,7 @@
         "solace": 101,
         "speedway": 91,
         "gelato": 81,
+        "montipora": 99,
         "symphonic": 107,
         "urban_plaza": 84,
         "waterfall": 101,
