--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         "coastal": 90,
         "terminal": 88,
         "unturned": 93,
+        "whiskers": 88,
         "comet": 116,
         "loft": 83,
         "santa's_rush": 93,
         "archway": 87,
         "ashore": 95,
-        "boletum": 0,
+        "boletum": 86,
         "build_site": 97,
         "chained": 91,
         "daolong": 91,
@@ -68,12 +69,13 @@
         "treenan": 96,
         "gingerbread": 0,
         "grotto": 101,
-        "snowkeep": 76,
+        "snowkeep": 96,
         "zen_plaza": 84,
         "airshow": 101,
         "ambush": 102,
         "apollo": 99,
         "aqil": 91,
+        "casita": 94,
         "crypt": 96,
         "deadwood": 84,
         "dragonstar": 101,
@@ -95,6 +97,7 @@
         "tuzi": 92,
         "yue": 102,
         "meso": 96,
+        "nebuc": 106,
         "orchestra": 107,
         "pernicious": 91,
         "polygon": 94,
@@ -102,6 +105,7 @@
         "sanctum": 92,
         "serenity": 94,
         "sky_rise": 91,
+        "slumber": 94,
         "solace": 101,
         "speedway": 91,
         "gelato": 81,
@@ -112,17 +116,20 @@
         "blitzen": 111,
         "frosted": 91,
         "nutcracker": 99,
+        "snowy_square": 96,
         "zarzul": 115,
         "acropolis": 101,
+        "aetius": 95,
         "amazon": 94,
+        "arid": 84,
         "ashfire": 121,
-        "babylon": 108,
+        "hanging_gardens": 108,
         "bio-hazard": 96,
         "cascade": 88,
-        "casita": 94,
         "cliffside": 101,
         "crogorm": 124,
         "dockyard": 98,
+        "ghoulish": 87,
         "ominosity": 124,
         "steampumpkin": 100,
         "trick_or_yeet": 95,
@@ -142,7 +149,8 @@
         "steampunk": 100,
         "fruitbrawl": 101,
         "fireplace": 96,
-        "lotice": 91
+        "lotice": 91,
+        "sweet_wonderland": 95
     },
     "skywars": {
         "anchored": 106,
@@ -205,6 +213,7 @@
         "desolate": 88,
         "dire": 85,
         "jacko_malice": 105,
+        "nightmare": 94,
         "sacrifice": 105,
         "scaremorial": 94,
         "selene": 84,
