--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
         "cauldron": 0,
         "hell_temple": 115,
         "mortuus": 91,
+        "harvesting": 96,
         "invasion": 116,
         "jurassic": 95,
         "kubo": 92,
         "lectus": 91,
         "orientwood": 101,
         "sky_festival": 95,
+        "nostalgia": 97,
         "obelisk": 115,
         "orchid": 87,
         "paladin": 99,
