--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         "jurassic": 95,
         "kubo": 92,
         "lectus": 91,
+        "lost_temple": 92,
         "orientwood": 101,
         "sky_festival": 95,
+        "mystery": 93,
         "nostalgia": 97,
         "obelisk": 115,
         "orchid": 87,
@@ -63,7 +65,7 @@
         "relic": 91,
         "rise": 97,
         "stilted": 81,
-        "stonekeep": 76,
+        "stonekeep": 96,
         "sandcastle": 103,
         "shark_attack": 95,
         "swashbuckle": 86,
@@ -77,6 +79,7 @@
         "ambush": 102,
         "apollo": 99,
         "aqil": 91,
+        "arcade": 91,
         "casita": 94,
         "crypt": 96,
         "deadwood": 84,
@@ -92,6 +95,7 @@
         "scareshow": 101,
         "screamway": 91,
         "harvest": 84,
+        "keep": 62,
         "lighthouse": 111,
         "lucky_rush": 85,
         "blossom": 97,
@@ -114,6 +118,7 @@
         "montipora": 99,
         "symphonic": 107,
         "urban_plaza": 84,
+        "vigilante": 88,
         "waterfall": 101,
         "blitzen": 111,
         "frosted": 91,
